# ketoan

./: .gitignore  README.md  license.txt  pyproject.toml
docs/blueprint/: 00_blueprint_p0.md  01_blueprint_doi_tru_npp.md
ketoan/: hooks.py  install.py  modules.txt  patches.txt  utils.py
ketoan/api/: _guard.py  alerts.py  bankimport.py  cash.py  cashbook.py  dashboard.py  doitru.py  npp.py  payables.py  prices.py  receivables.py  supervision.py  tasks.py  users.py
ketoan/ketoan/doctype/ketoan_bank_map_rule/: ketoan_bank_map_rule.json  ketoan_bank_map_rule.py
ketoan/ketoan/doctype/ketoan_portal_settings/: ketoan_portal_settings.json  ketoan_portal_settings.py
ketoan/patches/v0_0_1/: create_portal_roles.py  set_portal_defaults.py
ketoan/patches/v0_0_2/: create_channel_roles.py  grant_business_permissions.py
ketoan/patches/v0_0_3/: regrant_permissions.py
ketoan/patches/v0_0_4/: baseline_desk_perms.py
ketoan/patches/v0_0_5/: sales_tax_price_perms.py
ketoan/public/ketoan/: shell.css  shell.js
ketoan/public/ketoan/components/: cashbook.js  combobox.js  modal.js  toast.js
ketoan/public/ketoan/lib/: api.js  dom.js  format.js  router.js  workspaces.js
ketoan/public/ketoan/views/: alerts.js  bankimport.js  cash.js  customer.js  dashboard.js  home.js  ledger.js  npp.js  payables.js  payroll.js  receivables.js  roles.js  supervision.js  supplier.js  utilities.js  workspace.js
ketoan/www/: ketoan.html  ketoan.py
