[project]
name = "ketoan"
authors = [
    { name = "Hoang Giang JSC", email = "dev@hoanggiang.com" },
]
description = "Portal Kế toán Tác nghiệp — Bàn làm việc Công nợ & Quỹ trên ERPNext v16"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
